--- a/css/style.css
+++ b/css/style.css
@@ -6,18 +6,19 @@ body {
 }
 .header {
    
-   display: flex;
-   width: 1600px;
+   
+   width: 1200px;
    height: 80px;
    left: 0;
    top: 0;
 }
 .main-nav {
    display: flex;
+   align-items: center;
 }
 .container {
    
-   width: 1600px;
+   width: 1200px;
 }
 
 
@@ -41,6 +42,7 @@ font-weight: 900;
 font-size: 26px;
 letter-spacing: 0.03em;
 line-height: 1.2;
+margin-left: 218px;
 
 
 }
@@ -53,6 +55,7 @@ line-height: 1.2;
 }
 .list {
    display: flex;
+   
 }
 .list .item:not(:last-child) {
    margin-right: 40px;
@@ -89,7 +92,7 @@ line-height: 1.2;
    font-weight: 500;
    font-size: 14px;
    list-style: none;
-   margin-right: 12px;
+   
 }
 
 
@@ -99,7 +102,10 @@ line-height: 1.2;
 }
 .contacts {
    display: flex;
-   padding-right: 12px;
+   margin-left: auto;
+}
+.contacts .item + .item {
+   margin-left: 50px;
 }
 
 /*main section webstudio*/
@@ -107,6 +113,7 @@ line-height: 1.2;
 .hero {
    background: #2F303A;
    
+   width: 1600px;
    left: 0px;
    top: 80px;
 }
@@ -124,12 +131,13 @@ line-height: 1.2;
    background: #2196F3;
    color: #fff;
    padding: 0;
-   left: 700px;
+   margin-left: 700px;
    text-align: center;
    letter-spacing: 0.06em;
    line-height: 1.9;
    font-weight: 900;
    font-size: 16px;
+   
 }
 .button:hover {
    color:#2196F3;
