--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,32 @@
 *, *::before, *::after {
    box-sizing: inherit;
 }
-:root {
-   --blue-color: #2196f3;
-   --text-descr: #757575;
-   --text-headers: #212121;
-   --primary-white-color: #ffffff;
-   --background-main-color: #2f303a;
-   --background-gray-color: #f5f4fa;
+
+   :root {
+      --title-color: #212121;
+      --text-color: #757575;
+      --color-button: #ffff;
+      --primary-background: #2F303A;
+      --color-link-title: #2196f3;
+      --background-button: #2196f3;
+      --main-title-color: #ffff;
+      --our-team-background: #F5F4FA;
+      --address-text-color: #ffff;
+      --color-link-footer: #ffff;
+      --company-text-color: #000000;
+      --background-portfolio-button: #F5F4FA;
+  }
+
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+   margin-top: 0;
+   margin-bottom: o;
 }
 body {
    background: #e5e5e5; 
@@ -19,22 +38,36 @@ body {
 }
 
    
-.header-port {
+.header {
+   box-sizing: border-box;
    width: 1600px;
-   left: 0;
-   top: 0;
-
-
+   border-bottom: 1px solid #ECECEC;
+}
+.header-port {
+   display: flex;
+   align-items: center;
+}
+.container {
+   max-width: 1200px;
+   margin-left: auto;
+   margin-right: auto;
+   padding-left: 15px;
+   padding-right: 15px;
 }
 .main-nav {
    display: flex;
-   align-items: center;
-   padding-top: 32px;
-   
+   margin-top: 32px;
+   margin-bottom: 32px;
 }
-.container {
+.list-container {
+   display: flex;
+   padding-right: 20px;
+}
+
    
-   width: 1600px;
+
+.container {
+    width: 1600px;
 }
 
 
@@ -113,51 +146,59 @@ margin-left: 218px;
    color: #2196F3;
    
 }
+
 .contacts {
    display: flex;
    margin-left: auto;
+   margin-top: 32px;
+   margin-bottom: 32px;
 }
-.contacts .item + .item {
-   margin-left: 50px;
-}
+
+
 
 /*main section webstudio*/
 
 .hero {
-   background: #2F303A;
-   width: 1600px;
+   background: var(--primary-background);
+   text-align: center;
+   padding-top: 94px;
+   padding-bottom: 94px;
+   display: block;
 }
 .hero-box {
-   with: 1600px;
+   max-width: 1200px;
+   margin-left: auto;
+   margin-right: auto;
+   padding-left: 15px;
+   padding-right: 15px;
 }
- .hero .hero-text {
+ .hero-text {
    font-weight: 900;
-   color: #fff;
+   font-size: 44px;
+   line-height: 1.65;
+   text-align: center;
    letter-spacing: 0.06em;
    text-transform: uppercase;
-   line-height: 1.4;
-   text-align: center;
-   font-size: 44px;
-   margin-top: 0;
-   margin-bottom: 30px;
-   padding-left: 256px;
-   padding-right: 256px;
-   padding-top: 221px;
+   color: var(--main-title-color);
 }
- .hero .button {
-   font-family: Roboto;
-   font-weight: 700;
-   text-align: center;
-   padding: 10px 32px;
-   font-size: 16px;
-    line-height: 1.88;
-    background-color: #2196F3;
-    color: #fff;
-   box-shadow: 0px 4px 4px rgba(0 0 0 / 15%);
-   border-radius: 4px;
-   letter-spacing: 0.06em;
+.hero-text-section {
+   margin-top: 200px;
+}
+ .button {
+   background: var(--background-button);
    cursor: pointer;
+   font-family: inherit;
+   font-weight: bold;
+   font-size: 16px;
+   line-height: 1.87;
+   text-align: center;
+   letter-spacing: 0.06em;
+   color: var(--color-button);
+ }
+.button-section {
+   margin-bottom: 200px;
 }
+ 
 
 
 button, button:active, button:focus {
@@ -166,25 +207,31 @@ button, button:active, button:focus {
 
 //*middle section*//
 
+.section {
+   padding-top: 94px;
+   padding-bottom: 94px;
+}
 .middle-section {
-   width: 1200px;
-   padding: 94px 94px;
-    margin-left: 200px;;
-   margin-right: 200px;
-   
-   
+   display: flex;
+   justifu-content: center;
+}
+.container {
+   max-width: 1200px;
+   margin-left: auto;
+   margin-right: auto;
+   padding-left: 15px;
+   padding-right: 15px;
 }
 .hide-text {
    display: none;
 }
 .middle-list {
    display: flex;
-   margin-left: 200px;
-   margin-right: 200px;
-   padding-top: 94px;
-   padding-bottom: 94px;
 }
 .midle-list.item:not(:last-child) {
+   margin-right: 30px;
+}
+.item {
    margin-right: 30px;
 }
 .text-list {
@@ -220,9 +267,7 @@ button, button:active, button:focus {
    
    
 }
-.item {
-   margin-right: 30px;
-}
+
 
 .h2-description {
    color: #212121;
