--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
    box-sizing: inherit;
 }
 
-   :root {
+  :root {
       --title-color: #212121;
       --text-color: #757575;
       --color-button: #ffff;
@@ -32,11 +32,9 @@ p {
    margin-bottom: o;
 }
 body {
-   background: #e5e5e5; 
-   color:black;
-   font-family: Roboto;
+   font-family: Roboto, sans-serif;
+   margin: 0;
 }
-
    
 .header {
    box-sizing: border-box;
@@ -285,19 +283,26 @@ button, button:active, button:focus {
    padding-top: 94px;
    padding-bottom: 94px;
 }
-.our-team-container {
-   max-width: 1200px;
-   margin-left: auto;
-   margin-right: auto;
-   padding-left: 15px;
-   padding-right: 15px;
-   display: flex;
-   justify-content: center;
-}
 
+.our-team-box {
+   padding: 30px 32px;
+   box-sizing: border-box;
+}
+.our-team-item {
+    border-left: 1px solid #ececec;
+   border-right: 1px solid #ececec;
+   border-bottom: 1px solid #ececec;
+}
+.our-team-item:not(:last-child) {
+   margin-right: 30px;
+}
+.team-content-list {
+   background: #ffffff;
+    border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%), 0px 2px 1px rgb(0 0 0 / 20%);
+}
 .last-list {
-   display: flex;
-   
+   display: flex; 
 }
 .worker-name {
   color: #212121;
@@ -376,8 +381,6 @@ button, button:active, button:focus {
 
 
 
-//*Main section*//
-
 .main-section {
    padding-top: 94px;
    padding-bottom: 94px;
@@ -405,11 +408,6 @@ button, button:active, button:focus {
    margin-right: 8px;
    color: var(--title-color);
 }
-.btn-port-active {
-   background: var(--background-button);
-    color: var(--color-button);
-}
-
 .btn-port:hover {
    background: #2196F3;
    color:#fff;
@@ -436,14 +434,15 @@ button, button:active, button:focus {
 
 .flex-list {
    padding: 0;
-    margin: 0;
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: -30px;
-    margin-top: -30px;
+   margin: 0;
+   display: flex;
+   flex-wrap: wrap;
+   margin-left: -30px;
+   margin-top: -30px;
+    
 }
 .flex-list > .flex-item {
-   flex basis: calc(100% / 3 30px);
+   flex basis: calc((100%-90px) / 3);
    margin-left: 30px;
     margin-top: 30px;
 }
