--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,15 @@ p {
    margin-top: 0;
    margin-bottom: o;
 }
+.ul,
+.ol {
+   margin-top: o;
+   margin-bottom: 0;
+   padding-left: 0;
+}
+.img {
+   display: block;
+}
 body {
    font-family: Roboto, sans-serif;
    margin: 0;
@@ -47,24 +56,33 @@ body {
    align-items: center;
 }
 .container {
-   max-width: 1200px;
-   margin-left: auto;
-   margin-right: auto;
+   width: 1200px;
+   margin: 0 auto;
    padding-left: 15px;
    padding-right: 15px;
 }
 .main-nav {
    display: flex;
+   align-items: center;
    margin-top: 32px;
    margin-bottom: 32px;
 }
 .list-container {
    display: flex;
+   align-items: center;
    padding-right: 20px;
+   list-style: none;
 }
 
-
-
+.header-item:not(:last-child) {
+   margin-right: 50px;
+}
+.link {
+   font-weight: bold;
+    font-size: 14px;
+    line-height: 1.14;
+   color: var(--title-color);
+}
 
 
 .logo-blue {
@@ -83,13 +101,16 @@ color: black;
 font-weight: 900;
 font-size: 26px;
 letter-spacing: 0.03em;
-line-height: 1.2;
-margin-left: 218px;
+line-height: 1.2em;
+text-decoration: none;
+}
+.logo-container {
+margin-right: 92px;
 }
 .logo-footer {
    padding-top: 60px;
 }
-
+}
 /*стили для сылок*/
 
 * li, a  {
@@ -135,18 +156,15 @@ margin-left: 218px;
    list-style: none;
    
 }
-
-
 .link-grey:hover {
    color: #2196F3;
-   
-}
+   }
 
 .contacts {
    display: flex;
    margin-left: auto;
-   margin-top: 32px;
    margin-bottom: 32px;
+   list-style: none;
 }
 
 
