--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ p {
    margin: 0 auto;
    padding-left: 15px;
    padding-right: 15px;
+   box-sizing: border-box;
 }
 .main-nav {
    display: flex;
@@ -175,8 +176,6 @@ text-decoration: none;
     padding-top: 200px;
     padding-bottom: 200px;
 }
- 
-
  .hero-text {
    font-weight: 900;
    font-size: 44px;
@@ -195,12 +194,13 @@ text-decoration: none;
    font-size: 16px;
    line-height: 1.87;
    text-align: center;
+   padding: 10px 32px;
+   border-radius: 4px;
+   border: 0;
    letter-spacing: 0.06em;
    color: var(--color-button);
  }
-.button-section {
-   margin-bottom: 200px;
-}
+
  button, button:active, button:focus {
    outline: none;
 }
@@ -229,6 +229,7 @@ text-decoration: none;
 .middle-list {
    display: flex;
    list-style: none;
+   padding: 0;
 }
 .midle-list.item:not(:last-child) {
    margin-right: 30px;
@@ -255,7 +256,6 @@ text-decoration: none;
 //*What we do section*//
 
 .middle-section {
-   padding-top: 94px;
    padding-bottom: 94px;
 }
 .section-description {
@@ -276,11 +276,14 @@ text-decoration: none;
     margin-right: auto;
     padding-left: 15px;
     padding-right: 15px;
+    box-sizing: border-box;
 }
 .what-we-do-list {
    display: flex;
    align-items: center;
    list-style: none;
+   margin-right: -30px;
+   padding: 0;
 }
 
 /*our team*/
@@ -346,7 +349,7 @@ text-decoration: none;
 }  
 .footer-list {
       width: 230px;
-      padding-left: 0;
+      padding: 0;
  }
 
  .studio {
@@ -362,6 +365,7 @@ text-decoration: none;
    letter-spacing: 0.03em;
    font-size: 14px;
 }
+
 .mail {
    font-family: Roboto;
    font-style: normal;
@@ -398,7 +402,6 @@ text-decoration: none;
    display: flex;
     justify-content: center;
     margin-bottom: 34px;
-  
 }
    
 .padding-item:not(:last-child) {
@@ -406,13 +409,16 @@ text-decoration: none;
 }
    
 .btn-port {
-   font-family: inherit;
+   font-family: Roboto;
+   font-style: normal;
    background: var(--background-portfolio-button);
    cursor: pointer;
    font-weight: 500;
    font-size: 16px;
    line-height: 1.62;
    letter-spacing: 0.03em;
+   border-radius: 4x;
+   padding: 6px 22px;
    border: 0;
    margin-right: 8px;
    color: var(--title-color);
@@ -435,6 +441,7 @@ text-decoration: none;
    line-height: 1.6;
    letter-spacing: 0.03em;
    border-radius: 4px;
+   padding: 6px 22px;
    border-collapse: collapse;
    cursor: pointer;
 }
