--- a/css/style.css
+++ b/css/style.css
@@ -364,7 +364,9 @@ text-decoration: none;
    line-height: 1.7;
    letter-spacing: 0.03em;
    font-size: 14px;
+   padding-top: 9px;
 }
+
 
 .mail {
    font-family: Roboto;
