--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@ p {
    align-items: center;
    list-style: none;
    padding-left: 0;
+   margin: 0;
 }
 
 /*.header-item:not(:last-child) {
@@ -163,7 +164,7 @@ text-decoration: none;
    margin-left: auto;
    list-style: none;
 }
-.item {
+header.item {
    margin-right: 50px;
 }
 
@@ -207,9 +208,7 @@ text-decoration: none;
 
 
 .section-advantages {
-   padding-top: 94px;
-   padding-bottom: 94px;
-   
+   padding-top: 94px; 
 }
 
 .container {
@@ -265,6 +264,7 @@ text-decoration: none;
     text-align: center;
     letter-spacing: 0.03em;
     color: color: var(--title-color);
+    margin-bottom: 50px;
 }
 .what-we-do-description {
    display: flex;
@@ -350,6 +350,10 @@ text-decoration: none;
 .footer-list {
       width: 230px;
       padding: 0;
+      margin-top: 9px;
+ }
+ .footer-item-list:not(:last-child) {
+   margin-bottom: 9px;
  }
 
  .studio {
@@ -364,7 +368,7 @@ text-decoration: none;
    line-height: 1.7;
    letter-spacing: 0.03em;
    font-size: 14px;
-   padding-top: 9px;
+   
 }
 
 
@@ -487,6 +491,8 @@ text-decoration: none;
     letter-spacing: 0.06em;
     margin-bottom: 4px;
     color: var(--title-color);
+    margin-top: 0;
+    padding-left: 0;
 }
 
 .poster-desc {
@@ -494,6 +500,10 @@ text-decoration: none;
     line-height: 30px;
     letter-spacing: 0.03em;
     color: var(--text-color);
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left:0;
+
 }
 //*
    font-family: Roboto;
