--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,6 @@ body {
       --background-portfolio-button: #F5F4FA;
   }
 
-}
 h1,
 h2,
 h3,
@@ -33,16 +32,19 @@ h4,
 h5,
 h6,
 p {
-   margin: o;
+   margin-left: o;
+   margin-right: 0;
+   margin-bottom: 0;
+   margin-top: 0;
 }
 
-.ul,
-.ol,
-.li {
+ul,
+ol,
+li {
    margin: 0;
    padding: 0;
 }
-.img {
+img {
    display: block;
 }
 
@@ -68,12 +70,14 @@ p {
    display: flex;
    align-items: center;
 }
-.list-container {
+.list-row {
    display: flex;
    align-items: center;
    list-style: none;
-   padding-left: 0;
-   margin: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+    margin-left: auto;
 }
 
 /*.header-item:not(:last-child) {
@@ -89,7 +93,6 @@ font-size: 26px;
 letter-spacing: 0.03em;
 line-height: 1.2;
 list-style: none;
-margin-left: 214px;
 }
 
 .logo, .logo-footer {
@@ -128,7 +131,7 @@ text-decoration: none;
    line-height: 16px;
    letter-spacing: 0,02em;
    color: #212121;
-   padding-left: 80px;
+   padding-left: 60px;
    text-decoration: none;
 }
 .link-active {
@@ -164,9 +167,10 @@ text-decoration: none;
    display: flex;
    margin-left: auto;
    list-style: none;
+   align-items: center;
 }
-header.item {
-   margin-right: 50px;
+.header.item {
+   margin-right:not(:last-child) 50px;
 }
 
 
@@ -196,11 +200,14 @@ header.item {
    font-size: 16px;
    line-height: 1.87;
    text-align: center;
-   padding: 10px 32px;
+   box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
+   margin-top: 30px;
    border-radius: 4px;
    border: 0;
    letter-spacing: 0.06em;
    color: var(--color-button);
+   width: 200px;
+   height: 50px;
  }
 
  button, button:active, button:focus {
@@ -210,6 +217,7 @@ header.item {
 
 .section-advantages {
    padding-top: 94px; 
+   padding-bottom: 94px;
 }
 
 .container {
@@ -235,13 +243,15 @@ header.item {
    margin-right: 30px;
 }
 .item {
-   margin-right: 30px;
+   flex-basis: calc((100% - 120px) / 4);
+   margin-left: 30px;
 }
 .text-list {
    color: #212121;
    line-height: 1.1;
    letter-spacing: 0.03em;
    font-weight: 700;
+   margin-bottom: 10px;
    font-size: 14px;
    text-transform: uppercase;
 }
@@ -281,16 +291,18 @@ header.item {
 }
 .what-we-do-list {
    display: flex;
+   flex-wrap: wrap;
    align-items: center;
    list-style: none;
-   margin-right: -30px;
-   padding: 0;
+    padding: 0;
+    margin-left: -30px;
 }
+
 
 /*our team*/
 
 .our-team-section {
-   background: var(--our-team-background);
+   background: #faf4f5;
    padding-top: 94px;
    padding-bottom: 94px;
 }
@@ -304,20 +316,20 @@ header.item {
    border-right: 1px solid #ececec;
    border-bottom: 1px solid #ececec;
 }
-
-.our-team-item:not(:last-child) {
-   margin-right: 30px;
-} 
-
-.team-content-list {
-   background: #ffffff;
-    border-radius: 0px 0px 4px 4px;
+.our-team-item  {
+  flex-basis: calc((100% - 120px) / 4);
+    margin-left: 30px;
+    margin-top: 50px;
+    background: #ffffff;
     box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%), 0px 2px 1px rgb(0 0 0 / 20%);
+    border-radius: 0px 0px 4px 4px;
 }
-.last-list {
+.last-list  {
    display: flex; 
    list-style: none;
    margin-left: -30px;
+   margin-top: -50px;
+   align-items: center;
 }
 .worker-name {
   color: #212121;
@@ -328,8 +340,7 @@ header.item {
    font-size: 16px;
    margin-top: 0;
    margin-bottom: 10px;
- 
-}
+ }
 .grey-prof {
    font-size: 16px;
    line-height: 1.18;
@@ -345,21 +356,20 @@ header.item {
 
 .footer {
  background: #2F303a;
- padding-top: 60px;
- padding-bottom: 60px;
-}  
-.footer-list {
-      width: 230px;
-      padding: 0;
-      margin-top: 9px;
- }
+} 
+.footer-section {
+   padding-top: 60px;
+   padding-bottom: 60px;
+}
  .footer-item-list:not(:last-child) {
    margin-bottom: 9px;
  }
 
  .studio {
-    padding-top: 60px;
    color: #fff;
+}
+.footer-item:not(:last-child) {
+   margin-bottom: 9px;
 }
 .address {
    font-family: Roboto;
@@ -369,28 +379,18 @@ header.item {
    line-height: 1.7;
    letter-spacing: 0.03em;
    font-size: 14px;
-   
 }
 
-
-.mail {
+.mail, .tele {
    font-family: Roboto;
    font-style: normal;
    font-weight: 400;
    font-size: 14px;
    line-height: 1.7;
    letter-spacing: 0.03em;
-   color: rgba(255, 255, 255, 0.6);
+   color:  var(--text-color);
 }
-.tele {
-      font-family: Roboto;
-      font-style: normal;
-      font-weight: 400;
-      font-size: 14px;
-      line-height: 1.7;
-      letter-spacing: 0.03em;
-      color: rgba(255, 255, 255, 0.6);
-   }
+
 .address:hover, .mail:hover, .tele:hover {
    color:#2196F3;
 }
@@ -408,7 +408,8 @@ header.item {
 .btn-list {
    display: flex;
     justify-content: center;
-    margin-bottom: 34px;
+    padding: 94px 0px;
+    padding-bottom: 34px;
 }
    
 .padding-item:not(:last-child) {
@@ -427,6 +428,7 @@ header.item {
    border-radius: 4x;
    padding: 6px 22px;
    border: 0;
+   border-radius: 4px;
    margin-right: 8px;
    color: var(--title-color);
 }
@@ -469,7 +471,8 @@ header.item {
    margin-top: -30px;    
 }
 .flex-list > .flex-item {
-   flex basis: calc((100%-90px) / 3);
+   /*flex basis: calc((100%-90px) / 3)*/
+   flex-basis: calc((100% - 270px) / 9);
    margin-left: 30px;
     margin-top: 30px;
 }
@@ -486,13 +489,14 @@ header.item {
    border-top: 0;
 }
 .poster-name {
-   font-weight: bold;
+   font-weight: 700;
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
     margin-bottom: 4px;
     color: var(--title-color);
     margin-top: 0;
+    margin-bottom; 0;
     padding-left: 0;
 }
 
